--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
             android:layout_height="100dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:src="@drawable/ic_neshan_logo"
+            android:src="@mipmap/ic_launcher"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -920,7 +920,7 @@
                     android:layout_marginEnd="4dp"
                     android:adjustViewBounds="true"
                     android:tint="@color/white"
-                    app:srcCompat="@drawable/ic_neshan_logo" />
+                    app:srcCompat="@mipmap/ic_launcher" />
 
             </LinearLayout>
 
